--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </header>
         <article>
             <h1>Welcome to Jamily's Portfolio</h1>
-            <p>This is a placeholder for Jamily's portfolio content.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae tempore enim, error atque aliquam voluptas voluptatibus molestias eveniet rerum consectetur quisquam fuga fugit cupiditate natus voluptate doloribus expedita. Perferendis, et.</p>
         </article>
         <article>
-            <h1>Projects</h1>
-            <p>This is a few projects myself.</p>
+            <h2>Projects</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius blanditiis veritatis cupiditate dolorum amet, modi placeat sapiente dolore cum nemo repudiandae necessitatibus ad, iste eaque suscipit optio in velit facere?</p>
         </article>
     </main>
 </body>
